# gitulyse

./: .gitignore  .gitlab-ci.yml  README.md
docs/proposal/: proposal.md
docs/video-walk-through/: README.md
src/: .env.example  README.md  compose.yaml
src/backend/: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
src/backend/gitulyse_api/: __init__.py  commits.py  db.py  issues.py  pull_requests.py  repos.py  search.py  users.py
src/backend/tests/: conftest.py  test_commits.py  test_db.py  test_factory.py  test_issues.py  test_pull_requests.py  test_repos.py  test_search.py  test_users.py
src/gitulyse/: .env.example  .eslintrc.json  Dockerfile  README.md  jest.config.js  jsconfig.json  next.config.js  package-lock.json  package.json  postcss.config.js
src/gitulyse/__tests__/: GitTimeline.test.js  HomePage.test.js  RepoPage.test.js  SearchBar.test.js  UserCompareDialog.test.js  UserComparePage.test.js  UserPage.test.js  infoModal.test.js  nav.test.js  page.test.js  page.test.jsx  repo.test.js  repoComponents.test.js  userComponents.test.js
src/gitulyse/app/: layout.jsx  page.jsx
src/gitulyse/app/protected/: page.jsx
src/gitulyse/components/: Calendar.jsx  GitTimeline.jsx  Nav.jsx  Repos.jsx  Search.jsx  SearchBar.jsx  UserCompareDialog.jsx  infoModal.jsx
src/gitulyse/components/repo/: CodeContributions.jsx  IssueTracking.jsx  PercentageIssues.jsx  PercentagePullrequests.jsx  PullRequests.jsx
src/gitulyse/styles/: globals.css
src/gitulyse/testing-utils/: resizeObserverMock.js  test-utils.jsx
(+14 files in other folders)
